Fixed horizontal separator styles making vertical separators invisible
This is because all separators were targeted with a border-width style, which was setting a horizontal border width only, so because on vertical separators, there isn't a horizontal border, the separator wouldn't be seen.
Fixed by making different border widths for horizontal and vertical separators.

--- a/src/main/resources/ui/styles.css
+++ b/src/main/resources/ui/styles.css
@@ -16,6 +16,16 @@
 .separator .line
 {
     -fx-border-style: solid;
+}
+
+.separator:horizontal .line
+{
     /* Makes the separator just 1px wide. */
     -fx-border-width: 0 0 1 0;
+}
+
+.separator:vertical .line
+{
+    /* Makes the separator just 1px wide. */
+    -fx-border-width: 0 0 0 1;
 }
